<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
	android:key="first_preferencescreen">
	<PreferenceCategory android:title="@string/ui_settings_label"
		android:order="1">
		<EditTextPreference android:key="login_user"
			android:title="@string/ui_login_label" android:summary="@string/ui_login_desc"
			android:singleLine="true" android:dialogMessage="@string/ui_login_dialog_msg"
			android:persistent="true" />
		<EditTextPreference android:key="login_password"
			android:title="@string/ui_password_label" android:summary="@string/ui_password_desc"
			android:singleLine="true" android:password="true"
			android:dialogMessage="@string/ui_password_dialog_msg"
			android:persistent="true" />
		<CheckBoxPreference android:key="enable_auto_sync"
			android:title="@string/ui_enable_auto_sync_label" android:summary="@string/ui_enable_auto_sync_desc"
			android:persistent="true" android:defaultValue="true" />
		

		<PreferenceScreen android:title="@string/ui_settings_advanced_label"
			android:summary="@string/ui_settings_advanced_desc">
			<PreferenceCategory android:title="@string/ui_settings_advanced_cat_label">
						
				<ListPreference android:key="max_items_per_sync"
					android:title="@string/ui_max_items_per_sync_label"
					android:summary="@string/ui_max_items_per_sync_desc"
					android:entries="@array/max_items_per_sync_entries"
					android:entryValues="@array/max_items_per_sync_entries"
					android:defaultValue="@string/unlimited" android:persistent="true" />
					
				<ListPreference android:key="frequency_auto_submit"
					android:title="@string/ui_frequency_auto_submit_label"
					android:summary="@string/ui_frequency_auto_submit_desc"
					android:entries="@array/frequency_auto_submit_entries"
					android:entryValues="@array/frequency_auto_submit_entries"
					android:defaultValue="@string/_24h" android:persistent="true" />
					
					
			</PreferenceCategory>
		</PreferenceScreen>

	</PreferenceCategory>
</PreferenceScreen>
